package com.gykj.selectlinearlayout;

/**
 * @author 李玉江[QQ:1032694760]
 * @since 2014-09-05 11:49
 */
public class AppConfig {

    /**
     *
     */
    public static final String DEBUG_TAG = "guoyuan";// LogCat的标记
    public static final boolean DEBUG_ENABLE = false;// 是否调试模式

}
