@startuml

title __SELECTLINEARLAYOUT's Class Diagram__\n

  namespace com.gykj.selectlinearlayout {
    class com.gykj.selectlinearlayout.AppConfig {
        {static} + DEBUG_ENABLE : boolean
        {static} + DEBUG_TAG : String
    }
  }
  

  namespace com.gykj.selectlinearlayout {
    class com.gykj.selectlinearlayout.SelectLinearLayout {
        ~ addDicts : List<Dict>
        - _context : Context
        - _layoutParams : LayoutParams
        - dicts : List<Dict>
        - imageView : ImageView
        - includesAll : boolean
        - openListener : boolean
        - textView : TextView
        - tvName : String
        + SelectLinearLayout()
        + SelectLinearLayout()
        + SelectLinearLayout()
        + addDict()
        {static} + dip2px()
        + getOperationDict()
        + onClick()
        + setColor()
        + setDict()
        + setDicts()
        + setISelectDictListen()
        + setIncludesAll()
        + setOpenListener()
        + setOperationDict()
        + setTvName()
        - init()
    }
  }
  

  namespace com.gykj.selectlinearlayout {
    interface com.gykj.selectlinearlayout.SelectLinearLayout.ISelectDict {
        {abstract} + selectDict()
    }
  }
  

  com.gykj.selectlinearlayout.SelectLinearLayout .up.|> android.view.View.OnClickListener
  com.gykj.selectlinearlayout.SelectLinearLayout -up-|> android.widget.LinearLayout
  com.gykj.selectlinearlayout.SelectLinearLayout o-- com.gykj.selectlinearlayout.SelectLinearLayout.ISelectDict : iSelectDictListen
  com.gykj.selectlinearlayout.SelectLinearLayout o-- com.gykj.selectlinearlayout.bean.Dict : operationDict
  com.gykj.selectlinearlayout.SelectLinearLayout +-down- com.gykj.selectlinearlayout.SelectLinearLayout.ISelectDict


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
